fixed landing page display on mobile

--- a/src/scss/sizing.scss
+++ b/src/scss/sizing.scss
@@ -23,7 +23,7 @@
     .desktop-only {
         display: none !important;
     }
-    .box {
+    .lg-box {
         width: 72vw;
         margin-left: auto;
         margin-right: auto;
